robotic-codes/src/test/test_addrear.txt
test_addrear.cpp: In function ‘int main()’:
test_addrear.cpp:8:12: error: expected initializer before ‘s1’
   string s s1;
            ^~
test_addrear.cpp:9:3: error: ‘s’ was not declared in this scope
   s = "hello"
   ^
test_addrear.cpp:12:10: error: ‘num’ was not declared in this scope
   cin >> num;
          ^~~
test_addrear.cpp:12:10: note: suggested alternative: ‘enum’
   cin >> num;
          ^~~
          enum
test_addrear.cpp:13:10: error: ‘l’ was not declared in this scope
   cin >> l;
          ^
test_addrear.cpp:14:3: error: ‘s1’ was not declared in this scope
   s1 = addrear(s, l);
   ^~
test_addrear.cpp:14:8: error: ‘addrear’ was not declared in this scope
   s1 = addrear(s, l);
        ^~~~~~~
